# python_advent_2021

./: README.md  pyproject.toml
python_advent_2021/: advent.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py
test/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py
