[tool.poetry]
name = "python-advent-2021"
version = "0.1.0"
description = ""
authors = ["CrossTheStreams <arhautau@gmail.com.com>"]
readme = "README.md"
packages = [{include = "python_advent_2021"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
